# Numerical_integration

./: .gitignore  README.org  flake.nix
cpp/: CMakeLists.txt
cpp/include/numerical_integration/: integrators.hpp
cpp/scripts/: plot_errors.gnu
cpp/src/: main.cpp
py/: demo.py
py/numerical_integration/: __init__.py  core.py  methods.py  types.py  visualization.py
